service.yaml
## Service
---
apiVersion: v1
kind: Service
metadata:
   name: overseerr
   namespace: mediaserver
   labels:
     app: overseerr
spec:
  clusterIP: None
  ports:
  - port: 5055
  selector:
    app: overseerr




## Volumes
