ingress.yaml
## Ingress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: overseerr
  namespace: mediaserver
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect@kubernetescrd
spec:
  ingressClassName: traefik-external
  rules:
  - host: requests.farhoodliquor.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name:  overseerr
            port:
              number: 5055
  tls:
  - hosts:
    - requests.farhoodliquor.com
    secretName: farhoodliquor-com-cert-letsencrypt-prod
